--- a/Assets/style.css
+++ b/Assets/style.css
@@ -114,7 +114,7 @@ th {
 }
 
 
-@media (max-width : 500px ){
+@media (max-width : 300px ){
 .container-sum article h1{
     background-color: salmon;
     color: white;    
@@ -131,11 +131,17 @@ th {
     margin-left: 0;
     margin-right: 50%;
     width: 40px;
+    
 }
+
+.container {
+    align-content: center;
+}
+
 
 }
 
-@media (min-width : 500px){
+/* @media (min-width : 500px){
     .container-sum article h1{
         background-color: salmon;
         color: white;    
@@ -155,4 +161,4 @@ th {
     }
     .container.row.col-lg-12 article p {
         align: center;
-    }
+    } */
